--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Git Assignment (Calculator)</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    
+    <br><br>
+    <div class="container text-center">
+        <h1 id="heading1">Git Assignment no 1 (Calculator)</h1>
+        <br>
+        <h1 id="final-result"></h1>
+        <br><hr>
+        <input type="number" placeholder="Enter First Number" id="f-number" class="input-tag">
+        <input type="number" placeholder="Enter Second Number" id="s-number" class="input-tag">
+        <br><br>
+        <button class="btn btn-outline-dark" onclick="add()"><i class="fa-solid fa-plus"></i></button>
+        <button class="btn btn-outline-dark" onclick="sub()"><i class="fa-solid fa-minus"></i></button>
+        <button class="btn btn-outline-dark" onclick="mul()"><i class="fa-solid fa-xmark"></i></button>
+        <button class="btn btn-outline-dark" onclick="div()"><i class="fa-solid fa-divide"></i></button>
+    </div>
 </body>
 </html>
